[#62] feat: text overflow fixed

--- a/client/src/components/TodoItem/TodoItem.scss
+++ b/client/src/components/TodoItem/TodoItem.scss
@@ -49,7 +49,8 @@
       color: darkgray;
       font-size: 13px;
       font-weight: 400;
-      text-overflow: ellipsis;
+      line-break: anywhere;
+      // text-overflow: ellipsis;
       overflow: hidden;
     }
 
