--- a/client/src/components/TrashCan/TrashCan.scss
+++ b/client/src/components/TrashCan/TrashCan.scss
@@ -7,10 +7,11 @@
 	color: rgba(226, 110, 110, 0.8);
 	opacity: 0;
 	border-radius: 50%;
-
+	transition: all 300ms ease;
 	.todo-close {
-	  font-size: 50px;
-	  transition: all 300ms ease;
+		transition: all 300ms ease;
+		font-size: 50px;
+	//   transition: all 300ms ease;
 	  border: 1px solid  rgba(226, 110, 110, 0.0);
 	}
   }
@@ -28,5 +29,6 @@
 
 	.trash-can.activated.overlapped {
 	  background-color: rgba(226, 110, 110, 0.2);;
-
+		width: 200px;
+		height: 200px;
   }
